--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(178, 205, 235);
+    background-color: #b2cdeb;
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
